Update StatsDao.java